resources/tests/invalid_syntax/var_read_not_var.ct
//`'a' is not a variable!
//1
fn a()->void;

fn hello()->void {
  return a;
}